[package]
edition = "2021"
name = "jepsen-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
j4rs = "0.20.0"
log = "0.4.22"
madsim = "0.2.27"
once_cell = "1.20.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[build-dependencies]
j4rs = "0.20.0"
